listings/ch02-guessing-game-tutorial/listing-02-04/output.txt
   Compiling guessing_game v0.1.0 (/home/wusyong/Desktop/book-tw/listings/ch02-guessing-game-tutorial/listing-02-04)
error[E0308]: mismatched types
   --> src/main.rs:26:21
    |
26  |     match guess.cmp(&secret_number) {
    |                 --- ^^^^^^^^^^^^^^ expected struct `String`, found integer
    |                 |
    |                 arguments to this function are incorrect
    |
    = note: expected reference `&String`
               found reference `&{integer}`
note: associated function defined here
   --> /home/wusyong/.rustup/toolchains/1.65-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/cmp.rs:789:8
    |
789 |     fn cmp(&self, other: &Self) -> Ordering;
    |        ^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `guessing_game` due to previous error
